--- a/dotnet-backend/MovieTicket/MovieTicket.API/MovieTicket.API.csproj
+++ b/dotnet-backend/MovieTicket/MovieTicket.API/MovieTicket.API.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TicketProject.DataAccess\MovieTicket.DataAccess.csproj" />
+    <ProjectReference Include="..\MovieTicket.Infastructure\MovieTicket.Infastructure.csproj" />
   </ItemGroup>
 
 </Project>
