--- a/dotnet-backend/MovieTicket/MovieTicket.Core/MovieTicket.Core.csproj
+++ b/dotnet-backend/MovieTicket/MovieTicket.Core/MovieTicket.Core.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
