--- a/dotnet-backend/MovieTicket/MovieTicket.Infastructure/MovieTicket.Infastructure.csproj
+++ b/dotnet-backend/MovieTicket/MovieTicket.Infastructure/MovieTicket.Infastructure.csproj
@@ -7,13 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Migrations\" />
-    <Folder Include="Repositries\" />
+    <Folder Include="Repos\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="10.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -26,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ClassLibrary1\MovieTicket.Core.csproj" />
+    <ProjectReference Include="..\MovieTicket.Core\MovieTicket.Core.csproj" />
   </ItemGroup>
 
 </Project>
